--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,7 +8,17 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-.navbar-laravel {
+.navbar {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+}
+
+
+.list-group-item {
+  font-weight: bold;
+  font-size: 16px;
+  .badge-info {
+    font-size: 16px;
+    color: #fff;
+  }
 }
