--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10662,15 +10662,20 @@ a.text-dark:focus {
 
 .list-group-item {
   font-weight: bold;
-  font-size: 16px;
+  font-size: 14px;
 }
 
-.list-group-item .badge-info {
+.list-group-item .badge {
   font-size: 16px;
   color: #fff;
 }
 
 .list-group-item a {
   color: #212529;
+}
+
+.is-current-game {
+  font-weight: bold;
+  color: #e3342f;
 }
 
