--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10655,6 +10655,10 @@ a.text-dark:focus {
   }
 }
 
+.etch-play {
+  background: #fc1f7d;
+}
+
 .navbar {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
