--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -32,6 +32,9 @@
 .list-group-item {
   font-weight: bold;
   font-size: 14px;
+  white-space: nowrap; 
+  overflow: hidden;
+  text-overflow: ellipsis;
   
   .badge {
     font-size: 16px;
